; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bfa_msgq.c_bfa_msgq_rspq_attach.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bfa_msgq.c_bfa_msgq_rspq_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_msgq_rspq = type { %struct.bfa_msgq*, i32 }
%struct.bfa_msgq = type { i32 }

@BFA_MSGQ_RSPQ_NUM_ENTRY = common dso_local global i32 0, align 4
@rspq_sm_stopped = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_msgq_rspq*, %struct.bfa_msgq*)* @bfa_msgq_rspq_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_msgq_rspq_attach(%struct.bfa_msgq_rspq* %0, %struct.bfa_msgq* %1) #0 {
  %3 = alloca %struct.bfa_msgq_rspq*, align 8
  %4 = alloca %struct.bfa_msgq*, align 8
  store %struct.bfa_msgq_rspq* %0, %struct.bfa_msgq_rspq** %3, align 8
  store %struct.bfa_msgq* %1, %struct.bfa_msgq** %4, align 8
  %5 = load i32, i32* @BFA_MSGQ_RSPQ_NUM_ENTRY, align 4
  %6 = load %struct.bfa_msgq_rspq*, %struct.bfa_msgq_rspq** %3, align 8
  %7 = getelementptr inbounds %struct.bfa_msgq_rspq, %struct.bfa_msgq_rspq* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 8
  %8 = load %struct.bfa_msgq*, %struct.bfa_msgq** %4, align 8
  %9 = load %struct.bfa_msgq_rspq*, %struct.bfa_msgq_rspq** %3, align 8
  %10 = getelementptr inbounds %struct.bfa_msgq_rspq, %struct.bfa_msgq_rspq* %9, i32 0, i32 0
  store %struct.bfa_msgq* %8, %struct.bfa_msgq** %10, align 8
  %11 = load %struct.bfa_msgq_rspq*, %struct.bfa_msgq_rspq** %3, align 8
  %12 = load i32, i32* @rspq_sm_stopped, align 4
  %13 = call i32 @bfa_fsm_set_state(%struct.bfa_msgq_rspq* %11, i32 %12)
  ret void
}

declare dso_local i32 @bfa_fsm_set_state(%struct.bfa_msgq_rspq*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
